--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "dependencies": {
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.546.0",
-    "next": "15.5.6",
-    "react": "19.1.0",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
     "react-countup": "^6.5.3",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.1",
     "react-intersection-observer": "^10.0.0"
   },
   "devDependencies": {
